[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet python project lvl1"
authors = ["CaptainCollie"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:game"
brain-calc = "brain_games.scripts.brain_calc:calculator_game"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"
brain-progression = "brain_games.scripts.brain_progression:progression_game"
brain-prime = "brain_games.scripts.brain_prime:prime_game"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"
asciinema = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
